# CaloDiffusion

./: .gitignore  .gitmodules  README.md  pyproject.toml
.github/workflows/: test-calochallenge.yml  test-hgcal.yml
calodiffusion/: inference.py  optimize.py  plot.py  train.py  training.py
calodiffusion/configs/: config_HGCal.json  config_HGCal_photons.json  config_HGCal_pions.json  config_dataset1_photon.json  config_dataset1_pion.json  config_dataset2.json  config_dataset2_ae.json  config_dataset3.json
calodiffusion/models/: CaloAE.py  CaloDiffu.py  ControlNet.py  calodiffusion.py  diffusion.py  (+4 more)
configs/: config_HGCal.json  config_dataset1_photon.json  config_dataset2.json  config_dataset3.json
scripts/: CaloAE.py  CaloAE_torch.py  CaloDiffu.py  CaloDiffu_old.py  CaloScore.py  ConsistencyModel.py  ControlNet.py  Dataset.py  GeGe.py  HGCal_utils.py  SparsityClassifier.py  consts.py  create_average_showers.py  h5_merge.py  hgcal_metrics.py  models.py  plot.py  plot_E_ratios.py  plot_avg_shower.py  plot_h5_shower.py  sample.py  sampling.py  save_quantiles.py  score_matching.py  test_energy_loader.py  test_glam.py  test_hgcal_energy_loader.py  test_shower_split.py  train_ae.py  train_cond_dist.py  train_consis.py  train_diffu.py  train_layers.py  train_score.py  train_sparsity_classifier.py  utils.py
slurm/: diffu_train.sh  diffu_train_simple.sh  plot.sh  submit_plotting.py  submit_training.py
tests/: conftest.py  test_execution.py  test_metrics.py  test_optimization.py  test_optization.py  test_sampler_config.py  test_samplers.py  test_samplers_and_losses.py
(+44 files in other folders)
